--- a/src/components/drawer/drawer.styles.scss
+++ b/src/components/drawer/drawer.styles.scss
@@ -61,8 +61,8 @@
 
 .drawer-container-entering,
 .drawer-container-exiting {
-    opacity: 0.01;
-    transform: scale(0.1);
+    opacity: 0.1;
+    transform: scale(0.25);
 }
 
 .drawer-container-entered {
